# nvr

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.sh  pyproject.toml
.github/workflows/: ci.yml  ci.yml.disabled
SKILLS/: ai-deep-sanitize.md
config/: default.yml  mediamtx.yml  mosquitto.conf  vendor_patterns.yml
config/grafana/dashboards/: nvr-overview.json
docker/ai-engine/: Dockerfile
docker/api/: Dockerfile
docker/mqtt-bridge/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docker/recording-engine/: Dockerfile
docker/stream-manager/: Dockerfile
docker/web/: Dockerfile
docs/: PLAN.md  todo.md  todo_network.md  work-status.md
scripts/: auto-sanitize-push.sh  backup.sh  bootstrap_db.py  restore.sh  seed_db.py  setup-hooks.sh
services/ai-engine/app/: detector.py  frame_sampler.py  main.py  ollama_client.py  onvif_event_subscriber.py
services/api/: alembic.ini
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_camera_connection_error.py  0003_locations.py  0004_storage_backend_on_camera.py  0005_camera_ai_config.py  0006_location_color.py  99ea062c5062_add_display_order_to_cameras.py
services/api/app/: main.py
services/api/app/core/: config.py  database.py  metrics.py  redis.py  security.py
services/api/app/middleware/: auth.py  cors.py  logging.py  rate_limit.py
services/api/app/models/: __init__.py  alert_log.py  api_key.py  audio_level.py  audit_log.py  camera.py  camera_ip_history.py  discovery_log.py  discovery_scan.py  event.py  event_rule.py  location.py  notification.py  notification_template.py  recording.py  recording_schedule.py  storage_backend.py  storage_migration.py  storage_tier.py  stream_profile.py  system_config.py  system_upgrade.py  user.py
services/api/app/schemas/: auth.py  camera.py  common.py  location.py  recording.py  user.py
services/api/app/services/: ai_service.py  camera_probe.py  (+16 more)
services/api/tests/: conftest.py  factories.py  test_health_check_loop.py  test_live_relay.py  test_locations.py  test_rtsp_check.py  test_services.py  test_system_config.py
services/mqtt-bridge/app/: main.py
services/recording-engine/app/: main.py  recorder.py  retention.py  scheduler.py
services/stream-manager/app/: __init__.py  main.py  manager.py  mediamtx_bridge.py  onvif_motion.py  relay_api.py
services/web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
services/web/src/: App.tsx  index.css
(+93 files in other folders)
