[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvr-system"
version = "0.1.0"
description = "Network Video Recorder System with AI-powered detection"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "mBm TECHNOLOGY LLC", email = "info@mbm.technology"},
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "websockets>=14.1",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "aiohttp>=3.11",
    "opencv-python-headless>=4.10",
    "numpy>=2.2",
    "psutil>=6.1",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "factory-boy>=3.3",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
    "types-redis>=4.6",
]

ai = [
    "onnxruntime>=1.20",
    "opencv-python-headless>=4.10",
    "ultralytics>=8.3",
    "scikit-learn>=1.6",
]

stream = [
    "onvif-zeep-async>=3.1",
    "zeep>=4.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "alembic/versions/",
    ".venv/",
    "node_modules/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Gradually enable as code matures
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services", "packages"]
pythonpath = ["services/api", "packages/common"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short"
